# comparative-study-hybrid-combined-data-compression-algorithms-performance-efficiency

./: .gitignore  AEROSPACE_METRICS_SUMMARY.md  README.md  THESIS_FRAMEWORK_SUMMARY.md  aerospace_metrics_demo.py  pyproject.toml  requirements.txt  test_framework.py
data/results/: .gitkeep
data/test_files/: README.md  create_test_data.py  large_text.txt  medium_text.txt  small_text.txt  structured.json  text.txt
examples/: basic_usage.py
go_huffman_impl/: README.md  go.mod  inputs.in  inputs_results_newbm  main.go  utils.go
go_huffman_impl/compression/: bin.go  bwt.go  huf.go  lzw.go  mtf.go  rle.go
go_port/: 4algos.conf  BENCHMARK_README.md  CONFIG_GUIDE.md  README.md  VALIDATION_GUIDE.md  all_algo.conf  comprehensive_test.conf  example_pipeline.json  experiment.conf  fast_algorithms_config.conf  fast_benchmark.conf  final_test.conf  full_benchmark.conf  go.mod  go.sum  my_first_config_brute_force.conf  myconf.conf  output.txt  performance_test.go  simple_deflate.conf  standard.conf  test.conf  test.txt  test_all_all.conf  test_compression.go  test_input.txt  test_input.txt.arithmetic  test_input.txt.deflate  test_input.txt.lz77  test_input.txt.lz78  test_input.txt.pipeline  test_tries.txt  validate_results  validation_report_20250724_234835.json  validation_report_20250724_235045.json
go_port/cmd/benchmark_brute_force/: main.go
go_port/cmd/fast_benchmark/: main.go
go_port/cmd/validate_results/: main.go
go_port/examples/: demo.go  statistical_demo.go
go_port/internal/performance/: monitor.go
go_port/pkg/algorithms/: arithmetic.go  bwt.go  deflate.go  delta.go  huffman.go  lz77.go  lz78.go  lzw.go  mtf.go  rle.go  simple_rle.go
go_port/pkg/benchmarks/: benchmarks.go  (+10 more)
go_port/scientific_notes/: bruteForce.txt
(+16 files in other folders)
